Imported the QnA project and got it to run
6/5/2024: This commit involves various steps:
1) Made a fork of the SoarGroup/Domains-SoarQnA repo.
2) Cloned that repo on the local machine.
3) Imported that project into the Eclipse workspace for DroneSoar.
4) Fixed the build errors and and a few warnings.
5) Tested the qna-test agent running in a Soar debugger and it appears to work.