@@ -47,7 +47,7 @@ public class DatabaseEvalRead {
 			if (!r.exists()) {
 				System.err.println("Creating database:");
 				
-				Class.forName(dbDriver).newInstance();
+				Class.forName(dbDriver).getDeclaredConstructor().newInstance();
 				conn = DriverManager.getConnection((dbURLPrefix + dbFileName), "", "");
 				
 				System.err.println(" create table");
@@ -97,7 +97,7 @@ public class DatabaseEvalRead {
 			final Kernel kernel;
 			final Agent agent;
 			{
-				kernel = Kernel.CreateKernelInCurrentThread(Kernel.GetDefaultLibraryName(),true,0);
+				kernel = Kernel.CreateKernelInCurrentThread(true,0);
 				
 				System.err.println(" qna");
 				{
